# urban-giggle

./: 1.cpp  CMakeLists.txt  README.md  Timer.h  grep.cpp  grep.h  main.cpp  timer.h
tests/: test_files_generator.py  tests.cpp
tests/test_folder_1/: 200.txt
tests/test_folder_2/: 300.txt
tests/test_folder_2/another_folder/: 700.txt  800.txt  900.txt
